<resources>
    <string name="app_name">ParaniKontrolEt</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_add_budget">Add Budget</string>
    <string name="title_chart">Chart</string>
    <string name="title_detail">Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="name">name</string>
    <string name="verify_password">Verify Password</string>
    <string name="sign_up">sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_out">sign out</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="content_description">fab</string>
    <string name="income_expense_budget">Income-Expense Budget</string>
    <string name="amount">Amount</string>
    <string name="income">income</string>
    <string name="expense">expense</string>
    <string name="house_rent">house rent</string>
    <string name="invoices">invoices</string>
    <string name="rent">rent</string>
    <string name="fuel">fuel</string>
    <string name="another">another</string>
    <string name="bill">bill</string>
    <string name="phone">phone</string>
    <string name="regular_payment">regular payment</string>
    <string name="irregular_payment">irregular payment</string>
    <string name="error">Error</string>
    <string name="calender">calender</string>
    <string name="save">save</string>
    <string name="select_date_button">Select Date</string>
    <string name="car">car</string>
    <string name="electric">electric</string>
    <string name="water">water</string>
    <string name="gas">gas</string>
    <string name="internet">internet</string>
    <string name="market">market</string>
    <string name="education">education</string>
    <string name="clothes">clothes</string>
    <string name="others">others</string>
    <string name="loginimage">loginImage</string>
    <string name="text_view_date">12/12/1212</string>
    <string name="text_view_amount">250</string>
    <string name="text_view_type">income</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="please_add_data">Please add data</string>

</resources>