<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.sign_up.SignUpFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/editTextEmail"
        android:hint="@string/email"
        android:layout_marginTop="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.AppCompatEditText>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/editTextName"
        android:hint="@string/name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/editTextPassword"
        android:hint="@string/password"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/editTextVerifyPassword"
        android:hint="@string/verify_password"
        android:layout_marginTop="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword">
    </androidx.appcompat.widget.AppCompatEditText>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/editTextVerifyPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        android:layout_marginTop="30dp">
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignUpQuestion"
        android:text="@string/have_an_account"
        app:layout_constraintRight_toLeftOf="@+id/textViewSignIn"
        app:layout_constraintTop_toBottomOf="@id/buttonSignUp"
        android:layout_marginTop="8dp"
        android:textSize="16sp">
    </TextView>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSignIn"
        android:text="@string/sign_in"
        app:layout_constraintLeft_toRightOf="@id/textViewSignUpQuestion"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignUp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:textStyle="bold"
        android:textSize="16sp">
    </TextView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent">
    </ProgressBar>




</androidx.constraintlayout.widget.ConstraintLayout>